// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > build all 1`] = `undefined`;

exports[`build > build all 2`] = `
{
  "alert": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [
        "alert",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {
        "type": {
          "accent": [
            "alert-accent",
          ],
          "error": [
            "alert-error",
          ],
          "info": [
            "alert-info",
          ],
          "neutral": [
            "alert-neutral",
          ],
          "primary": [
            "alert-primary",
          ],
          "secondary": [
            "alert-secondary",
          ],
          "success": [
            "alert-success",
          ],
          "warning": [
            "alert-warning",
          ],
        },
      },
    },
    {
      "base": [
        "alert",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "avatar": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "badge": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {
        "size": {
          "lg": [
            "badge-lg",
          ],
          "md": [
            "badge-md",
          ],
          "sm": [
            "badge-sm",
          ],
          "xs": [
            "badge-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {
        "ghost": {
          "true": [
            "badge-ghost",
          ],
        },
        "outline": {
          "true": [
            "badge-outline",
          ],
        },
        "type": {
          "accent": [
            "badge-accent",
          ],
          "error": [
            "badge-error",
          ],
          "info": [
            "badge-info",
          ],
          "neutral": [
            "badge-neutral",
          ],
          "primary": [
            "badge-primary",
          ],
          "secondary": [
            "badge-secondary",
          ],
          "success": [
            "badge-success",
          ],
          "warning": [
            "badge-warning",
          ],
        },
      },
    },
    {
      "base": [
        "badge",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "bottom-navigation": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {
        "size": {
          "lg": [
            "btm-nav-lg",
          ],
          "md": [
            "btm-nav-md",
          ],
          "sm": [
            "btm-nav-sm",
          ],
          "xs": [
            "btm-nav-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [
        "btm-nav",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "breadcrumbs": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "button": [
    {
      "base": [
        "btn",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {
        "shape": {
          "circle": [
            "btn-circle",
          ],
          "square": [
            "btn-square",
          ],
        },
        "size": {
          "block": [
            "btn-block",
          ],
          "lg": [
            "btn-lg",
          ],
          "md": [
            "btn-md",
          ],
          "sm": [
            "btn-sm",
          ],
          "wide": [
            "btn-wide",
          ],
          "xs": [
            "btn-xs",
          ],
        },
      },
    },
    {
      "base": [
        "btn",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {
        "active": {
          "true": [
            "btn",
          ],
        },
        "disabled": {
          "true": [
            "btn",
          ],
        },
        "focusVisible": {
          "true": [
            "btn",
          ],
        },
        "ghost": {
          "true": [
            "btn-ghost",
          ],
        },
        "glass": {
          "true": [
            "btn",
          ],
        },
        "hover": {
          "true": [
            "btn",
          ],
        },
        "link": {
          "true": [
            "btn-link",
          ],
        },
        "outline": {
          "true": [
            "btn-outline",
          ],
        },
        "type": {
          "accent": [
            "btn-accent",
          ],
          "error": [
            "btn-error",
          ],
          "info": [
            "btn-info",
          ],
          "neutral": [
            "btn-neutral",
          ],
          "primary": [
            "btn-primary",
          ],
          "secondary": [
            "btn-secondary",
          ],
          "success": [
            "btn-success",
          ],
          "warning": [
            "btn-warning",
          ],
        },
      },
    },
    {
      "base": [
        "btn",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "card": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "carousel": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "chat": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "checkbox": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "collapse": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "countdown": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "diff": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "divider": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "drawer": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "dropdown": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "file-input": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "footer": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "form": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "hero": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "indicator": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "input": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "join": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "kbd": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "link": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "loading": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "mask": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "menu": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "navbar": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "progress": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "radial-progress": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "radio": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "range": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "rating": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "select": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "skeleton": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "stack": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "stat": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "steps": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "swap": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "tab": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "table": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "textarea": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "timeline": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "toast": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "toggle": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
  "tooltip": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "variants": {},
    },
  ],
}
`;

exports[`build > build base 1`] = `undefined`;

exports[`build > build base change default selector case  > index 1`] = `
"page {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 235 47 150;
  --ice-secondary-hover: 247 89 171;
  --ice-secondary-active: 196 29 127;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 194 194;
  --ice-accent-hover: 54 207 201;
  --ice-accent-active: 8 151 156;
  --ice-accent-content: 255 255 255;
  --ice-info: 47 84 235;
  --ice-info-hover: 89 126 247;
  --ice-info-active: 29 57 196;
  --ice-info-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-ant-neutral-100: 255 255 255;
  --ice-ant-neutral-200: 250 250 250;
  --ice-ant-neutral-300: 245 245 245;
  --ice-ant-neutral-400: 240 240 240;
  --ice-ant-neutral-500: 217 217 217;
  --ice-ant-neutral-600: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-800: 89 89 89;
  --ice-ant-neutral-900: 67 67 67;
  --ice-ant-neutral-1000: 38 38 38;
  --ice-ant-neutral-1100: 31 31 31;
  --ice-ant-neutral-1200: 20 20 20;
  --ice-ant-neutral-1300: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 203 43 131;
  --ice-secondary-hover: 160 38 105;
  --ice-secondary-active: 224 82 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 168 168;
  --ice-accent-hover: 19 133 133;
  --ice-accent-active: 51 188 183;
  --ice-accent-content: 255 255 255;
  --ice-info: 43 74 203;
  --ice-info-hover: 38 62 160;
  --ice-info-active: 82 115 224;
  --ice-info-content: 255 255 255;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 187;
  --ice-ant-neutral-1300: 255 255 255;
  --ice-ant-neutral-1200: 250 250 250;
  --ice-ant-neutral-1100: 245 245 245;
  --ice-ant-neutral-1000: 240 240 240;
  --ice-ant-neutral-900: 217 217 217;
  --ice-ant-neutral-800: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-600: 89 89 89;
  --ice-ant-neutral-500: 67 67 67;
  --ice-ant-neutral-400: 38 38 38;
  --ice-ant-neutral-300: 31 31 31;
  --ice-ant-neutral-200: 20 20 20;
  --ice-ant-neutral-100: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base change default selector case  > legacy 1`] = `
"page {
  --ice-primary: 22,119,255;
  --ice-primary-hover: 64,150,255;
  --ice-primary-active: 9,88,217;
  --ice-primary-content: 255,255,255;
  --ice-success: 82,196,26;
  --ice-success-hover: 115,209,61;
  --ice-success-active: 56,158,13;
  --ice-success-content: 255,255,255;
  --ice-warning: 250,173,20;
  --ice-warning-hover: 255,197,61;
  --ice-warning-active: 212,136,6;
  --ice-warning-content: 255,255,255;
  --ice-error: 245,34,45;
  --ice-error-hover: 255,77,79;
  --ice-error-active: 207,19,34;
  --ice-error-content: 255,255,255;
  --ice-neutral: 102,102,102;
  --ice-neutral-hover: 115,115,115;
  --ice-neutral-active: 64,64,64;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 235,47,150;
  --ice-secondary-hover: 247,89,171;
  --ice-secondary-active: 196,29,127;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,194,194;
  --ice-accent-hover: 54,207,201;
  --ice-accent-active: 8,151,156;
  --ice-accent-content: 255,255,255;
  --ice-info: 47,84,235;
  --ice-info-hover: 89,126,247;
  --ice-info-active: 29,57,196;
  --ice-info-content: 255,255,255;
  --ice-base-100: 255,255,255;
  --ice-base-200: 242,242,242;
  --ice-base-300: 229,230,230;
  --ice-base-content: 31,41,55;
  --ice-ant-neutral-100: 255,255,255;
  --ice-ant-neutral-200: 250,250,250;
  --ice-ant-neutral-300: 245,245,245;
  --ice-ant-neutral-400: 240,240,240;
  --ice-ant-neutral-500: 217,217,217;
  --ice-ant-neutral-600: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-800: 89,89,89;
  --ice-ant-neutral-900: 67,67,67;
  --ice-ant-neutral-1000: 38,38,38;
  --ice-ant-neutral-1100: 31,31,31;
  --ice-ant-neutral-1200: 20,20,20;
  --ice-ant-neutral-1300: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22,104,220;
  --ice-primary-hover: 21,84,173;
  --ice-primary-active: 60,137,232;
  --ice-primary-content: 255,255,255;
  --ice-success: 73,170,25;
  --ice-success-hover: 60,134,24;
  --ice-success-active: 106,190,57;
  --ice-success-content: 255,255,255;
  --ice-warning: 216,150,20;
  --ice-warning-hover: 170,119,20;
  --ice-warning-active: 232,179,57;
  --ice-warning-content: 255,255,255;
  --ice-error: 211,32,41;
  --ice-error-hover: 166,29,36;
  --ice-error-active: 232,71,73;
  --ice-error-content: 255,255,255;
  --ice-neutral: 90,90,90;
  --ice-neutral-hover: 73,73,73;
  --ice-neutral-active: 106,106,106;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 203,43,131;
  --ice-secondary-hover: 160,38,105;
  --ice-secondary-active: 224,82,156;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,168,168;
  --ice-accent-hover: 19,133,133;
  --ice-accent-active: 51,188,183;
  --ice-accent-content: 255,255,255;
  --ice-info: 43,74,203;
  --ice-info-hover: 38,62,160;
  --ice-info-active: 82,115,224;
  --ice-info-content: 255,255,255;
  --ice-base-100: 29,35,42;
  --ice-base-200: 25,30,36;
  --ice-base-300: 21,25,30;
  --ice-base-content: 166,173,187;
  --ice-ant-neutral-1300: 255,255,255;
  --ice-ant-neutral-1200: 250,250,250;
  --ice-ant-neutral-1100: 245,245,245;
  --ice-ant-neutral-1000: 240,240,240;
  --ice-ant-neutral-900: 217,217,217;
  --ice-ant-neutral-800: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-600: 89,89,89;
  --ice-ant-neutral-500: 67,67,67;
  --ice-ant-neutral-400: 38,38,38;
  --ice-ant-neutral-300: 31,31,31;
  --ice-ant-neutral-200: 20,20,20;
  --ice-ant-neutral-100: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base with custom types 1`] = `undefined`;

exports[`build > build nothing 1`] = `undefined`;

exports[`build > hash map init buildBase 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 2`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 3`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 2 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
]
`;

exports[`build > hash map init buildComponents diff 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.alert",
    {
      "value": "ff5cbce0b1e50d71e84b0532eaefbe92a9aee89e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
]
`;

exports[`build > hash map init buildUtilities 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
]
`;
